--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
 <html>
+  <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  </head>  
+  <body>
+    <div class="jumbotron">
+      <h1>Testing Some Stuff</h1>
+      <p>What's up my brotha..</p>
+    </div>
+  </body>
 <html>
+  
