--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
+<!doctype html>
 <html>
-  <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  </head>  
-  <body>
-    <div class="jumbotron">
-      <h1>Testing Some Stuff</h1>
-      <p>What's up my brotha..</p>
-    </div>
-  </body>
-<html>
-  
+<head>
+<title>
+Silly simple
+</title>
+	
+</head>
+<body>
+	<button id="silly">Do it</button>
+	<button id="clear">Clear</button>
+	<div id="results"></div>
+	
+	
+	<script src="js/zepto.js"></script>
+	<script src="js/silly.js"></script>
+	<script>
+		$('#silly').click(function() {
+			SILLY.DoIt($('#results'));
+		});
+		$('#clear').click(function() {
+			SILLY.DoIt($('#results').html(''));
+		});
+	</script>
+</body>
+</html>
