--- a/index.html
+++ b/index.html
@@ -1,8 +1,21 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style>
+body, html { width:100% ;
+    height:100% ;
+    overflow:hidden ;
+}
+
+iframe { width:100% ;
+        height:100% ;
+    border:none ;
+}
+</style>
+</head>
 <body>
 
-<iframe src="http://getbootstrap.com/">
+<iframe src="http://192.168.1.153/wordpress/">
   <p>Your browser does not support iframes.</p>
 </iframe>
 
