--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
 body, html { width:100% ;
     height:100% ;
     overflow:hidden ;
+	padding: 0px 0px 0px 0px;
 }
 
 iframe { width:100% ;
         height:100% ;
     border:none ;
+	margin: 0px 0px 0px 0px;
 }
 </style>
 </head>
