--- a/index.html
+++ b/index.html
@@ -2,20 +2,39 @@
 <html>
 <head>
 <style>
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, caption {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
+}
+
 body, html { width:100% ;
     height:100% ;
     overflow:hidden ;
-	padding: 0px 0px 0px 0px;
+	
 }
 
 iframe { width:100% ;
         height:100% ;
     border:none ;
 	margin: 0px 0px 0px 0px;
+	
+}
+.container-fluid {
+  padding-right: 0px;
+  padding-left: 0px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  margin-right: auto;
+  margin-left: auto;
 }
 </style>
 </head>
-<body>
+<body class="container-fluid">
 
 <iframe src="http://192.168.1.153/wordpress/">
   <p>Your browser does not support iframes.</p>
