--- a/index.html
+++ b/index.html
@@ -18,6 +18,23 @@ body, html { width:100% ;
 	
 }
 
+iframe { width:100% ;
+        height:100% ;
+    border:none ;
+	margin: 0px 0px 0px 0px;
+	
+}
+
+.scroll-wrapper {
+	-webkit-overflow-scrolling: touch;
+  	overflow-y: scroll;
+
+	/* important:  dimensions or positioning here! */
+}
+
+.scroll-wrapper iframe {
+	/* nada! */
+}
 
 .container-fluid {
   padding-right: 0px;
@@ -28,21 +45,6 @@ body, html { width:100% ;
   margin-left: auto;
 }
 </style>
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.8.1.js"></script>
-    <script type="text/javascript">
-    $(function(){
-        if (/iPhone|iPod|iPad/.test(navigator.userAgent))
-            $('iframe').wrap(function(){
-                var $this = $(this);
-                return $('<div />').css({
-                    width: $this.attr('width'),
-                    height: $this.attr('height'),
-                    overflow: 'scroll',
-                    '-webkit-overflow-scrolling': 'touch'
-                });
-            });
-    })
-    </script>
 
 </head>
 <body>
@@ -51,10 +53,11 @@ body, html { width:100% ;
 <p>TEST</p>
 <p>TEST</p>
 <p>TEST</p>
-
+<div class="scroll-wrapper">
 <iframe src="http://192.169.165.251/">
   <p>Your browser does not support iframes.</p>
 </iframe>
+</div
 <p>TEST</p>
 <p>TEST</p>
 <p>TEST</p>
