--- a/index.html
+++ b/index.html
@@ -18,16 +18,15 @@ body, html { width:100% ;
 	
 }
 
-iframe { width:100% ;
-        height:100% ;
-    border:none ;
-	margin: 0px 0px 0px 0px;
-	
-}
 
 .scroll-wrapper {
 	-webkit-overflow-scrolling: touch;
   	overflow-y: scroll;
+  	width:100% ;
+        height:100% ;
+    border:none ;
+	margin: 0px 0px 0px 0px;
+	
 
 	/* important:  dimensions or positioning here! */
 }
