--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@ body, html { width:100% ;
 .scroll-wrapper iframe {
 	/* nada! */
 }
+iframe {
+	width:100% ;
+        height:100% ;
+    border:none ;
+	margin: 0px 0px 0px 0px;	
+}
 
 .container-fluid {
   padding-right: 0px;
