--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body, html { width:100% ;
   	overflow-y: scroll;
   	width:100% ;
         height:100% ;
-    border:none ;
+        border:none ;
 	margin: 0px 0px 0px 0px;
 	
 
@@ -34,10 +34,11 @@ body, html { width:100% ;
 .scroll-wrapper iframe {
 	/* nada! */
 }
+
 iframe {
 	width:100% ;
         height:100% ;
-    border:none ;
+        border:none ;
 	margin: 0px 0px 0px 0px;	
 }
 
@@ -53,20 +54,10 @@ iframe {
 
 </head>
 <body>
-<p>TEST</p>
-<p>TEST</p>
-<p>TEST</p>
-<p>TEST</p>
-<p>TEST</p>
 <div class="scroll-wrapper">
 <iframe src="http://192.169.165.251/">
-  <p>Your browser does not support iframes.</p>
+  <h1>Oops!</h1><p>This app is not compatible with your device. Please visit our site directly at <a href="http://192.169.165.251/">http://192.169.165.251/</a></p>
 </iframe>
-</div
-<p>TEST</p>
-<p>TEST</p>
-<p>TEST</p>
-<p>TEST</p>
-<p>TEST</p>
+</div>
 </body>
 </html>
