--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 body, html { width:100% ;
     height:100% ;
     overflow:hidden ;
-	
+ ---other existing attributes---
+ overflow-y: scroll;	
 }
 
 
