--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     background: transparent;
 }
 
-body, html { width:100% ;
+body, html { 
+/*    
+    width:100% ;
     height:100% ;
-    overflow:hidden ;
+    overflow:hidden ; */
  ---other existing attributes---
  overflow-y: scroll;	
 }
