--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 }
 
 body, html { 
-/*    
-    width:100% ;
-    height:100% ;
+    
+   /* width:100% ;
+    height:99% ;
     overflow:hidden ; */
  ---other existing attributes---
  overflow-y: scroll;	
@@ -40,7 +40,7 @@ body, html {
 
 iframe {
 	width:100% ;
-        height:100% ;
+        height:50% ;
         border:none ;
 	margin: 0px 0px 0px 0px;	
 }
