--- a/index.html
+++ b/index.html
@@ -1,66 +1,36 @@
-<!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="test.css">
 <style>
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, caption {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    outline: 0;
-    font-size: 100%;
-    vertical-align: baseline;
-    background: transparent;
-}
-
-body, html { 
-    
-   width:100% ;
-    height:100% ;
-    overflow:hidden ;
- ---other existing attributes---
- overflow-y: scroll;	
-}
-
-
-.scroll-wrapper {
-	-webkit-overflow-scrolling: touch;
-  	overflow-y: scroll;
-  	width:100% ;
-        height:100% ;
-        border:none ;
-	margin: 0px 0px 0px 0px;
-	
-
-	/* important:  dimensions or positioning here! */
-}
-
-.scroll-wrapper iframe {
-	/* nada! */
-}
-
-iframe {
-	width:100% ;
-        height:100% ;
-        border:none ;
-	margin: 0px 0px 0px 0px;	
-}
-
-.container-fluid {
-  padding-right: 0px;
-  padding-left: 0px;
-  padding-top: 0px;
-  padding-bottom: 0px;
-  margin-right: auto;
-  margin-left: auto;
+video#bgvid { 
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+    background: url(polina.jpg) no-repeat;
+    background-size: cover; 
 }
 </style>
 
 </head>
-<body>
-<div class="scroll-wrapper">
-<iframe src="http://ucovenant.info/">
-  <h1>Oops!</h1><p>This app is not compatible with your device. Please visit our site directly at <a href="http://192.169.165.251/">http://192.169.165.251/</a></p>
-</iframe>
-</div>
-</body>
+
+
+<!--           -->
+<h1>TEST PAGE</h1>
+<form action="home.html">
+    <input type="submit" value="uCovenant">
+</form>
+<video autoplay loop poster="polina.jpg" id="bgvid">
+    <source src="test.webm" type="video/webm">
+    <source src="test.mp4" type="video/mp4">
+</video>
+
 </html>
