--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ document.location.href="http://ucovenant.info";
   
 
     var element = document.getElementById("body");
-   element.innerHTML = "<div class='tutorial'>t</div><a href='intro2.html'><img src='images/rightArrow.png' style='height: 25px; width: 25px; margin-left:50%' /></a>";
+   element.innerHTML = "<div class='tutorial'><a href='intro2.html'><img src='images/rightArrow.png' style='height: 75px; width: 75px; margin-left:50%; margin-top; 80%;' /></a></div>";
 }
 </script>
 </div>
