--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <head>
 <link rel="stylesheet" href="test.css">
 <style>
+
+html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, figure, footer, header, hgroup, menu, nav, section, time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
+}
+
 video#bgvid { 
     position: fixed;
     top: 50%;
@@ -25,7 +36,42 @@ video#bgvid {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  min-height: 1000px;
+  margin: 0px;
 }
+
+.invisibleButton {
+
+    background: transparent;
+    border: none !important; 
+    font-size:0;
+	min-height: 100px;
+	min-width: 100px;
+	position: fixed;
+	bottom: 0px; 
+	right: 0px;
+	
+}
+
+.textBox {
+background-color:white;
+position:fixed;
+    top: 50%;
+    left: 50%;
+    width:60%;
+    height:auto;
+    margin-top: -9px; /*set to a negative number 1/2 of your height*/
+    margin-left: -40%; /*set to a negative number 1/2 of your width*/
+    border: 1px solid #ccc;
+	padding:15px;
+	border-radius: 10%;
+	-webkit-box-shadow: 0px -1px 18px -2px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px -1px 18px -2px rgba(0,0,0,0.75);
+box-shadow: 0px -1px 18px -2px rgba(0,0,0,0.75);
+font-family: Helvetica;
+
+}
+
 </style>
 
 </head>
@@ -43,7 +89,7 @@ document.location.href="http://ucovenant.info";
   
 
     var element = document.getElementById("body");
-   element.innerHTML = "<div class='tutorial'><a href='intro2.html'><img src='images/rightArrow.png' style='height: 75px; width: 75px; margin-left:50%; margin-top; 80%;' /></a></div>";
+   element.innerHTML = "<div class='tutorial'><div class='textBox'>First thing's first. Let's get registered, shall we?</div><a href='intro2.html'><button class='invisibleButton'></button></a></div>";
 }
 </script>
 </div>
