Index was missing body id tag
Java script didn't know div to update.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ font-weight: bold;
 </style>
 
 </head>
-<body class="bigText" target="_parent">
+<body id="body" class="bigText" target="_parent">
 <script>
 var applaunchCount = window.localStorage.getItem('launchCount');
 
