--- a/index.html
+++ b/index.html
@@ -18,7 +18,51 @@ html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquot
     background: transparent;
 }
 
+body, html { 
+    
+   width:100% ;
+    height:100% ;
+    overflow:hidden ;
+ ---other existing attributes---
+ overflow-y: scroll;	
+}
+.scroll-wrapper {
+	-webkit-overflow-scrolling: touch;
+  	overflow-y: scroll;
+  	width:100% ;
+        height:100% ;
+        border:none ;
+	margin: 0px 0px 0px 0px;
+	
+	/* important:  dimensions or positioning here! */
+}
+.scroll-wrapper iframe {
+	/* nada! */
+}
+iframe {
+	width:100% ;
+        height:100% ;
+        border:none ;
+	margin: 0px 0px 0px 0px;	
+}
+.container-fluid {
+  padding-right: 0px;
+  padding-left: 0px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  margin-right: auto;
+  margin-left: auto;
+}
 
+html { 
+  background: url(images/discussionThread.png) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+ background-size: 100% 100%;
+
+}
 
 
 .introFont{
