--- a/index.test.html
+++ b/index.test.html
@@ -18,6 +18,42 @@ html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquot
     background: transparent;
 }
 
+body, html { 
+    
+   width:100% ;
+    height:100% ;
+    overflow:hidden ;
+ ---other existing attributes---
+ overflow-y: scroll;	
+}
+.scroll-wrapper {
+	-webkit-overflow-scrolling: touch;
+  	overflow-y: scroll;
+  	width:100% ;
+        height:100% ;
+        border:none ;
+	margin: 0px 0px 0px 0px;
+	
+	/* important:  dimensions or positioning here! */
+}
+.scroll-wrapper iframe {
+	/* nada! */
+}
+iframe {
+	width:100% ;
+        height:100% ;
+        border:none ;
+	margin: 0px 0px 0px 0px;	
+}
+.container-fluid {
+  padding-right: 0px;
+  padding-left: 0px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
 html { 
   background: url(images/discussionThread.png) no-repeat center center fixed; 
   -webkit-background-size: cover;
@@ -70,22 +106,21 @@ font-weight: bold;
 </style>
 
 </head>
-<body id="body" class="bigText" target="_parent">
-<script>
-var applaunchCount = window.localStorage.getItem('launchCount');
+<body class="bigText">
+<img class="img-responsive middle" height="450px" width="450px" src="images/uCovenantLogoWhite.png" />
+<div class="introFont container">
+<strong>Welcome to U&middot;Covenant - a contemporary Christian ministry built </strong>
+<br><i>By You, For God.</i>
+<br><strong>Join members across the globe in discussions and services centered around the issues that matter to you.</strong>
+</div>
 
-//Check if it already exists or not
-if(applaunchCount){
-document.location.href="http://ucovenant.info";
+<div class="container">
+<a class="noUnderline" href="discussionThread.html">
+<div class="getStartedButton introFont">Get started</div>
+</a>
+</div>	
 
-}else{
-  //Local storage is not set, hence first time launch. set the local storage item
-  
 
-    var element = document.getElementById("body");
-   element.innerHTML = "<img class='img-responsive middle' height='450px' width='450px' src='images/uCovenantLogoWhite.png' /><div class='introFont container'><strong>Welcome to U&middot;Covenant - a contemporary Christian ministry built </strong><br><i>By You, For God.</i><br><strong>Join members across the globe in discussions and services centered around the issues that matter to you.</strong></div><div class='container'><a class='noUnderline' href='discussionThread.html'><div class='getStartedButton introFont'>Get started</div></a></div>";
-}
-</script>
 </body>
 
 </html>
