--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-<link rel="stylesheet" href="css/bootstrap.css">
-<link href='fonts/ShadowsIntoLight.ttf' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+<link href='fonts/ShadowsIntoLight.ttf' rel='stylesheet' type='text/css' />
 <style>
 @font-face {
 font-family: shadowsintolight;
