--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8" />
 <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 <link href='fonts/ShadowsIntoLight.ttf' rel='stylesheet' type='text/css' />
-<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, target-densitydpi=device-dpi" />
 <style>
 @font-face {
 font-family: shadowsintolight;
