--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <meta charset="utf-8" />
 <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 <link href='fonts/ShadowsIntoLight.ttf' rel='stylesheet' type='text/css' />
-<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, target-densitydpi=device-dpi" />
 <style>
 @font-face {
 font-family: shadowsintolight;
@@ -70,7 +69,7 @@ html {
 .introFont{
 
 font-family:shadowsintolight;
-font-size: 420%;
+font-size: 210%;
 text-align: center;
 color: white;
 
@@ -108,7 +107,7 @@ font-weight: bold;
 </style>
 
 </head>
-<body id="body" class="bigText" target="_parent">
+<body id="body" target="_parent">
 <script>
 var applaunchCount = window.localStorage.getItem('launchCount');
 
@@ -121,7 +120,7 @@ document.location.href="http://ucovenant.info";
   
 
     var element = document.getElementById("body");
-   element.innerHTML = "<div class='scroll-wrapper'><img class='img-responsive middle' height='450px' width='450px' src='images/uCovenantLogoWhite.png' /><div class='introFont container'><strong>Welcome to U&middot;Covenant - a contemporary Christian ministry built </strong><br><i>By You, For God.</i><br><strong>Join members across the globe in discussions and services centered around the issues that matter to you.</strong></div><div class='container'><a class='noUnderline' href='discussionThread.html'><div class='getStartedButton introFont'>Get started</div></a></div></div>";
+   element.innerHTML = "<div class='scroll-wrapper'><img class='img-responsive middle' height='225px' width='225px' src='images/uCovenantLogoWhite.png' /><div class='introFont container'><strong>Welcome to U&middot;Covenant - a contemporary Christian ministry built </strong><br><i>By You, For God.</i><br><strong>Join members across the globe in discussions and services centered around the issues that matter to you.</strong></div><div class='container'><a class='noUnderline' href='discussionThread.html'><div class='getStartedButton introFont'>Get started</div></a></div></div>";
 }
 </script>
 </body>
