--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ html {
 .introFont{
 
 font-family:shadowsintolight;
-font-size: 210%;
+font-size: 100%;
 text-align: center;
 color: white;
 
@@ -120,7 +120,7 @@ document.location.href="http://ucovenant.info";
   
 
     var element = document.getElementById("body");
-   element.innerHTML = "<div class='scroll-wrapper' style='max-height:75%;'><img class='img-responsive middle' height='225px' width='225px' src='images/uCovenantLogoWhite.png' /><div class='introFont container'><strong>Welcome to U&middot;Covenant - a contemporary Christian ministry built </strong><br><i>By You, For God.</i><br><strong>Join members across the globe in discussions and services centered around the issues that matter to you.</strong></div><div class='container'><a class='noUnderline' href='discussionThread.html'><div class='getStartedButton introFont'>Get started</div></a></div></div>";
+   element.innerHTML = "<div class='scroll-wrapper'><img class='img-responsive middle' height='225px' width='225px' src='images/uCovenantLogoWhite.png' /><div class='introFont container'><strong>Welcome to U&middot;Covenant - a contemporary Christian ministry built </strong><br><i>By You, For God.</i><br><strong>Join members across the globe in discussions and services centered around the issues that matter to you.</strong></div><div class='container'><a class='noUnderline' href='discussionThread.html'><div class='getStartedButton introFont'>Get started</div></a></div></div>";
 }
 </script>
 </body>
