--- a/discussionThread.html
+++ b/discussionThread.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-<link rel="stylesheet" href="css/bootstrap.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="css/bootstrap.min.css" media="screen" title="main">
 <link href='fonts/ShadowsIntoLight.ttf' rel='stylesheet' type='text/css'>
 <style>
 @font-face {
