--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" media="screen" title="main">
 <link href='fonts/ShadowsIntoLight.ttf' rel='stylesheet' type='text/css' />
 <style>
 @font-face {
