--- a/index.html
+++ b/index.html
@@ -1,129 +1,39 @@
+<!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" media="screen" title="main">
-<link href='fonts/ShadowsIntoLight.ttf' rel='stylesheet' type='text/css' />
-<style>
-@font-face {
-font-family: shadowsintolight;
-src: url(fonts/shadowsintolight.ttf);
-}
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <title></title>
 
-html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, figure, footer, header, hgroup, menu, nav, section, time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    outline: 0;
-    font-size: 100%;
-    vertical-align: baseline;
-    background: transparent;
-}
+    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <script src="lib/ionic/js/ionic.bundle.js"></script>
 
-body, html { 
-    
-   width:100% ;
-    height:100% ;
-    overflow:hidden ;
- ---other existing attributes---
- overflow-y: scroll;	
-}
-.scroll-wrapper {
-	-webkit-overflow-scrolling: touch;
-  	overflow-y: scroll;
-  	width:100% ;
-        height:100% ;
-        border:none ;
-	margin: 0px 0px 0px 0px;
-	
-	/* important:  dimensions or positioning here! */
-}
-.scroll-wrapper iframe {
-	/* nada! */
-}
-iframe {
-	width:100% ;
-        height:100% ;
-        border:none ;
-	margin: 0px 0px 0px 0px;	
-}
-.container-fluid {
-  padding-right: 0px;
-  padding-left: 0px;
-  padding-top: 0px;
-  padding-bottom: 0px;
-  margin-right: auto;
-  margin-left: auto;
-}
+    <!-- cordova script (this will be a 404 during development) -->
+    <script src="cordova.js"></script>
 
-html { 
-  background: url(images/discussionThread.png) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
- background-size: 100% 100%;
+    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
+    <link href="css/ionic.app.css" rel="stylesheet">
+    -->
 
-}
+    <script src="js/app.js"></script>
+    <script src="js/controllers.js"></script>
+    <script src="js/routes.js"></script>
+    <script src="js/services.js"></script>
+    <script src="js/directives.js"></script>
 
+    <!-- Only required for Tab projects w/ pages in multiple tabs 
+    <script src="lib/ionicuirouter/ionicUIRouter.js"></script>
+    -->
 
-.introFont{
-
-font-family:shadowsintolight;
-font-size: 150%;
-text-align: center;
-color: white;
-
-}
-
-
-.uRed{
-color:#820028;
-}
-
-.uPurple{
-color:#800080;
-}
-
-.middle {
-margin: 0 auto;
-}
-
-a.noUnderline {
-text-decoration: none;
-}
-
-.getStartedButton {
-border-style: solid;
-border-width: 10px;
-border-color: white;
-background-color: #800080;
-color:white;
-margin-top:5%;
-margin-left: 10%;
-margin-right: 10%;
-font-weight: bold;
-}
-
-</style>
-
-</head>
-<body id="body" target="_parent">
-<script>
-var applaunchCount = window.localStorage.getItem('launchCount');
-
-//Check if it already exists or not
-if(applaunchCount){
-document.location.href="http://ucovenant.info";
-
-}else{
-  //Local storage is not set, hence first time launch. set the local storage item
-  
-
-    var element = document.getElementById("body");
-   element.innerHTML = "<div class='scroll-wrapper'><img class='img-responsive middle' height='10%' width='10%' src='images/uCovenantLogoWhite.png' /><div class='introFont container'><strong>Welcome to U&middot;Covenant - a contemporary Christian ministry built </strong><br><i>By You, For God.</i><br><strong>Join members across the globe in discussions and services centered around the issues that matter to you.</strong></div><div class='container'><a class='noUnderline' href='discussionThread.html'><div class='getStartedButton introFont'>Get started</div></a></div></div>";
-}
-</script>
-</body>
-
+  </head>
+  <body ng-app="app" animation="slide-left-right-ios7">
+  <div>
+    <div>
+        <ion-nav-bar class="bar-stable">
+            <ion-nav-back-button class="button-icon icon ion-ios-arrow-back">Back</ion-nav-back-button>
+        </ion-nav-bar>
+        <ion-nav-view></ion-nav-view>
+    </div>
+</div>
+  </body>
 </html>
