--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title></title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+	<link href='fonts/ShadowsIntoLight.ttf' rel='stylesheet' type='text/css'>
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
@@ -24,7 +25,12 @@
     <!-- Only required for Tab projects w/ pages in multiple tabs 
     <script src="lib/ionicuirouter/ionicUIRouter.js"></script>
     -->
-
+   <style>
+   @font-face {
+font-family: shadowsintolight;
+src: url(fonts/shadowsintolight.ttf);
+}
+   </style>
   </head>
   <body ng-app="app" animation="slide-left-right-ios7">
   <div>
