--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" media="screen" title="main">
+<link rel="stylesheet" type="text/css" href="css/custom.css">
 <link href='fonts/ShadowsIntoLight.ttf' rel='stylesheet' type='text/css' />
 <style>
 @font-face {
@@ -10,51 +11,6 @@ font-family: shadowsintolight;
 src: url(fonts/shadowsintolight.ttf);
 }
 
-html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, figure, footer, header, hgroup, menu, nav, section, time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    outline: 0;
-    font-size: 100%;
-    vertical-align: baseline;
-    background: transparent;
-}
-
-body, html { 
-    
-   width:100% ;
-    height:100% ;
-    overflow:hidden ;
- ---other existing attributes---
- overflow-y: scroll;	
-}
-.scroll-wrapper {
-	-webkit-overflow-scrolling: touch;
-  	overflow-y: scroll;
-  	width:100% ;
-        height:100% ;
-        border:none ;
-	margin: 0px 0px 0px 0px;
-	
-	/* important:  dimensions or positioning here! */
-}
-.scroll-wrapper iframe {
-	/* nada! */
-}
-iframe {
-	width:100% ;
-        height:100% ;
-        border:none ;
-	margin: 0px 0px 0px 0px;	
-}
-.container-fluid {
-  padding-right: 0px;
-  padding-left: 0px;
-  padding-top: 0px;
-  padding-bottom: 0px;
-  margin-right: auto;
-  margin-left: auto;
-}
 
 html { 
   background: url(images/discussionThread.png) no-repeat center center fixed; 
@@ -66,44 +22,6 @@ html {
 
 }
 
-
-.introFont{
-
-font-family:shadowsintolight;
-font-size: 150%;
-text-align: center;
-color: white;
-
-}
-
-
-.uRed{
-color:#820028;
-}
-
-.uPurple{
-color:#800080;
-}
-
-.middle {
-margin: 0 auto;
-}
-
-a.noUnderline {
-text-decoration: none;
-}
-
-.getStartedButton {
-border-style: solid;
-border-width: 10px;
-border-color: white;
-background-color: #800080;
-color:white;
-margin-top:5%;
-margin-left: 10%;
-margin-right: 10%;
-font-weight: bold;
-}
 
 </style>
 
@@ -121,7 +39,7 @@ document.location.href="http://ucovenant.info";
   
 
     var element = document.getElementById("body");
-   element.innerHTML = "<div class='scroll-wrapper'><img class='img-responsive middle' height='10%' width='10%' src='images/uCovenantLogoWhite.png' /><div class='introFont container'><strong>Welcome to U&middot;Covenant - a contemporary Christian ministry built </strong><br><i>By You, For God.</i><br><strong>Join members across the globe in discussions and services centered around the issues that matter to you.</strong></div><div class='container'><a class='noUnderline' href='discussionThread.html'><div class='getStartedButton introFont'>Get started</div></a></div></div>";
+   element.innerHTML = "<div class='scroll-wrapper'><div class='col-xs-12'><img class='img-responsive col-xs-6 col-xs-offset-3' src='images/uCovenantLogoWhite.png' /></div><div class=' col-xs-12 introFont container'><strong>Welcome to U&middot;Covenant - a contemporary Christian ministry built </strong><br><i>By You, For God.</i><br><strong>Join members across the globe in discussions and services centered around the issues that matter to you.</strong></div><div class='container col-xs-12'><a class='noUnderline' href='discussionThread.html'><div class='getStartedButton introFont'>Get started</div></a></div></div>";
 }
 </script>
 </body>
