--- a/register.html
+++ b/register.html
@@ -1,12 +1,15 @@
 <html>
 <head>
-<link rel="stylesheet" href="css/bootstrap.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="css/bootstrap.min.css" media="screen" title="main">
+<link rel="stylesheet" type="text/css" href="css/custom.css">
 <link href='fonts/ShadowsIntoLight.ttf' rel='stylesheet' type='text/css'>
 <style>
 @font-face {
 font-family: shadowsintolight;
 src: url(fonts/shadowsintolight.ttf);
 }
+
 html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, figure, footer, header, hgroup, menu, nav, section, time, mark, audio, video {
     margin: 0;
     padding: 0;
@@ -24,107 +27,21 @@ html {
   -o-background-size: cover;
   background-size: cover;
  background-size: 100% 100%;
-
-}
-
-.bigText{
-font-family:shadowsintolight;
-font-size: 220%;
-
-}
-
-.centerPic {
-margin: 0 auto;
-
-margin-bottom: 5px;
-}
-.whiteRowBack {
-background-color:white;
-
- overflow: hidden;
-
-}
-
-.blueRowBack {
-background-color:#0078a2;
-    bottom: 0;
-    left: 0;
-    right: 0;
-	position:relative;
-	color: white;
-	padding-left: 10%;
-	padding-right: 10%;
-	padding-top: 7%;
+ min-width:100%;
 
 
 }
 
-.shadow {
-margin-bottom: -13px;
-height: 15px;
-
-	-webkit-box-shadow: 0px -4px 15px -2px rgba(0,0,0,0.75);
--moz-box-shadow: 0px -4px 15px -2px rgba(0,0,0,0.75);
-box-shadow: 0px -4px 15px -2px rgba(0,0,0,0.75);
-position:relative;
-}
-
-.arrowLeft{
- position:fixed;
-    left:0;
-    bottom:60%;
-    margin:0 0 0 5%;
-    padding:0;
-    width:10%;
-}
-
-.arrowRight{
-  position:fixed;
-    right:0;
-    bottom:60%;
-    margin:0 5% 0 0;
-    padding:0;
-    width:10%;	
-}
-
-.signButtons {
-margin-left:10%;
-margin-right:10%;
-}
-
-.bottomFill {
-min-height:50%;
-margin-top: 0px;
-
-}
-
-.signUpButton, a.signUpButton  {
-border-style: solid;
-border-width: 10px;
-border-color: white;
-background-color: #800080;
-color:white;
-text-decoration: none;
-margin-top:15px;
-padding:2% 10% 2% 10%;
-}
-
-.skipButton, a.skipButton {
-color:white;
-font-size:60%;
-text-decoration: none;
-padding:5% 10% 0 10%;
-}
 </style>
 
 </head>
 <body class="bigText">
 <div class="container-fluid row">
-	<img style="margin-top:10%; margin-bottom: -40%; overflow:hidden;" class="img-responsive centerPic" src="images/registerPhoneFramed.png" width="600" height="1200" />
-    <div class="row blueRowBack container-fluid bottomFill" style="font-size: 200%; margin-bottom: 0px;">
+	<div class="col-xs-8 col-xs-offset-2"><img class="img-responsive centerPic phone" src="images/registerPhoneFramed.png" /></div>
+    <div class="col-xs-12 blueRowBack container-fluid">
 	Ready to join the uCovenant community?
 
-	<div style="padding-right: 10%; padding-left:10%; text-align:center;">
+	<div>
 		
 			<a href="http://uCovenant.info/register/" class="signUpButton btn-block">Sign-Up</a>
 		
@@ -132,6 +49,7 @@ padding:5% 10% 0 10%;
 	</div>
 	</div>
 </div>	
+<div class="col-xs-12 bottomFill"><!-- Meant to fill rest of space --></div>
 <div class="row">
 <a href="updates.html"><img class="arrowLeft" src="images/leftArrow.png" /></a>
 <a href="http://www.ucovenant.info/register/"><img class="arrowRight" src="images/rightArrow.png" /></a>
