--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button id="btn">Fetch Info for 3 New Animals</button>
     </header>
 
-    <div id="animal-info"></div>
+    <div id="comments"></div>
 
     <script src="js/rest.js"></script>
 
